Fixed apexcharts dark mode color scheme

--- a/src/kellojo/m/themes/base/src/ApexCharts.less
+++ b/src/kellojo/m/themes/base/src/ApexCharts.less
@@ -21,3 +21,9 @@
 .apexcharts-xaxistooltip-bottom:before {
     border-bottom-color: @sapUiPageHeaderBorderColor !important;
 }
+
+.apexcharts-canvas {
+    text {
+        fill: @sapUiContentLabelColor !important;
+    }
+}
